--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,16 +9,7 @@ on:
       - 'feature/**'
 
 jobs:
-  build-base:
-    permissions:
-      contents: read
-      pull-requests: write
-      deployments: write
-      packages: write
-    name: Build
-    uses: ./.github/workflows/build-base.yml
-    secrets: inherit 
-
+  # This uses the same base as hmpps-github-actions-runner
   build-runner:
     permissions:
       contents: read
@@ -27,8 +18,6 @@ jobs:
       packages: write
     name: Build
     uses: ./.github/workflows/build-runner.yml
-    needs:
-      - build-base
     with:
       push: true
     secrets: inherit 
