--- a/.github/workflows/scheduled_deployment-3.yml
+++ b/.github/workflows/scheduled_deployment-3.yml
@@ -1,8 +1,8 @@
 name: Scheduled deployment - pod 3
 
 on:
-  schedule:
-    - cron: "30 01,13 * * *" # Every 12 hours - needs to be all done before OWASP scans start from 03:00
+  # schedule:
+  #   - cron: "30 01,13 * * *" # Every 12 hours - needs to be all done before OWASP scans start from 03:00
 
   workflow_dispatch:
 
