--- a/helm_deploy/values-pod1.yaml
+++ b/helm_deploy/values-pod1.yaml
@@ -1,7 +1,7 @@
 ---
 # Per environment values which override defaults in hmpps-github-actions-runner/values.yaml
 generic-service:
-  nameOverride: hmpps-github-actions-runner-security-pod-1
+  nameOverride: pod-1
 
 generic-prometheus-alerts:
   alertSeverity: hmpps-sre-alerts
