pull a new image every time

--- a/helm_deploy/hmpps-github-actions-runner-security/values.yaml
+++ b/helm_deploy/hmpps-github-actions-runner-security/values.yaml
@@ -7,6 +7,7 @@ generic-service:
     repository: ghcr.io/ministryofjustice/hmpps-github-actions-runner-security
     tag: xxx    # override at deployment time
     port: 8080
+    pullPolicy: Always
 
   ingress:
     enabled: false
