add permissions to scheduled_deployment-4

--- a/.github/workflows/scheduled_deployment-4.yml
+++ b/.github/workflows/scheduled_deployment-4.yml
@@ -26,3 +26,6 @@ jobs:
     uses: ./.github/workflows/runner-cleanup.yml
     needs: deploy-to-prod
     secrets: inherit
+    permissions:
+      contents: read
+      pull-requests: write
