--- a/helm_deploy/values-pod2.yaml
+++ b/helm_deploy/values-pod2.yaml
@@ -3,6 +3,12 @@
 generic-service:
   nameOverride: hmpps-github-actions-runner-security-pod-2
 
+  volumes:
+    - name: security-runners-cache
+      persistentVolumeClaim:
+        claimName: security-runners-cache-2
+
+
 generic-prometheus-alerts:
   alertSeverity: hmpps-sre-alerts
   targetApplication: hmpps-github-actions-runner-security-pod-2
