--- a/helm_deploy/values-pod4.yaml
+++ b/helm_deploy/values-pod4.yaml
@@ -3,6 +3,11 @@
 generic-service:
   nameOverride: hmpps-github-actions-runner-security-pod-4
 
+  volumes:
+    - name: security-runners-cache
+      persistentVolumeClaim:
+        claimName: security-runners-cache-4
+
 generic-prometheus-alerts:
   alertSeverity: hmpps-sre-alerts
   targetApplication: hmpps-github-actions-runner-security-pod-4
