implement persistent storage on each pod (#45)
* implement persistent storage on each pod

* removed extra lines

--- a/helm_deploy/values-pod2.yaml
+++ b/helm_deploy/values-pod2.yaml
@@ -3,7 +3,11 @@
 generic-service:
   nameOverride: hmpps-github-actions-runner-security-pod-2
 
+  volumes:
+    - name: security-runners-cache
+      persistentVolumeClaim:
+        claimName: security-runners-cache-2
+
 generic-prometheus-alerts:
   alertSeverity: hmpps-sre-alerts
   targetApplication: hmpps-github-actions-runner-security-pod-2
-
