--- a/helm_deploy/values-pod3.yaml
+++ b/helm_deploy/values-pod3.yaml
@@ -3,7 +3,11 @@
 generic-service:
   nameOverride: hmpps-github-actions-runner-security-pod-3
 
+  volumes:
+    - name: security-runners-cache
+      persistentVolumeClaim:
+        claimName: security-runners-cache-3
+
 generic-prometheus-alerts:
   alertSeverity: hmpps-sre-alerts
   targetApplication: hmpps-github-actions-runner-security-pod-3
-
